# ai-workers

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
agents/hisho/: brain.py  calendar_client.py  calendar_manager.py  config.py  email_triage.py  gmail_client.py  main.py  reporter.py  scheduler.py  slack_handler.py
agents/sales/: classifier.py  config.py  feedback.py  gmail_client.py  main.py  notion_client.py  pipeline.py  reasoner.py  research.py  scheduler.py  slack_handler.py
agents/sanbou/: brain.py  config.py  db.py  main.py  reporter.py  scheduler.py  slack_handler.py  team_monitor.py
docs/: StepAI_AI_Workers_Spec_v1.md  stepai_ai_workers_guide.docx
prompts/: content_kun_system_prompt_v1.md  hisho_kun_system_prompt_v1.md  sales_kun_system_prompt_v1.md  sanbou_kun_system_prompt_v1.md  sns_kun_system_prompt_v1.md
